# llama-index-readers-pdfmux

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llama_index_readers_pdfmux/: __init__.py  base.py
tests/: test_reader.py
